--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -5,7 +5,7 @@ p.col-md-2
   = @market.name
 p.com-md-1
   strong = "#{t('markets.thead.period')}:"
-  = @market.period
+  = Period.where(id: @market.period).first.name
 
 - @market.volsofdays.each do |volsofday|
     - if volsofday.errors.any?
