--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -16,24 +16,24 @@ p.com-md-1
             li = message
 
 #market-show.col-md-12
-  #volsofdays.col-md-4
-    /#volsofdays-new.col-md-4
+  #volsofdays
+    /#volsofdays-new.col-md-6
       h2 New time/value
       = render 'volsofdays/form'
 
-    #volsofdays-list.col-md-10
+    #volsofdays-list.col-md-6
       h2 = t('markets.volsofdays')
       - if @market.volsofdays.count > 0
-        table.table.table-striped.table-hover.table-condensed.table-bordered
-          thead
-            tr
-              th = t('markets.volsofday.time')
-              th = t('markets.volsofday.value')
-              /th [colspan="1"]
-          tbody
-            = render @market.volsofdays.order(:time)
+        /table.table.table-striped.table-hover.table-condensed.table-bordered
+        /  thead
+        /    tr
+        /      th = t('markets.volsofday.time')
+        /      th = t('markets.volsofday.value')
+        /      /th [colspan="1"]
+        /  tbody
+        = render 'volsofdays/volsofday'
 
-  #worktime.col-md-5
+  #worktime.col-md-6
     #worktime-broadcastings
       h2 = t('markets.worktimes')
       - if @market.worktime_broadcastings.count > 0
