--- a/app/views/volumes/_volume.html.slim
+++ b/app/views/volumes/_volume.html.slim
@@ -1,10 +1,9 @@
 = form_for @device, remote:true do |device_form|
   .col-md-12.padb20
-    - @device.volumes.each do |volumes|
-      = device_form.fields_for volumes, index: volumes.id do |volumes_form|
-        .field.col-md-2
-          = device_form.label volumes.description
-          = volumes_form.number_field :value, min: 0, max:100, class: "form-control" if volumes.id.present?
+    = device_form.fields_for :volumes do |volumes_form|
+      .field.col-md-2
+        = volumes_form.text_field :description, readonly: true, style: "border:none;"
+        = volumes_form.number_field :value, min: 0, max:100, class: "form-control"
     .col-md-12.padt20
       = device_form.submit t('std.save'), class: "btn btn-md btn-success pull-left col-md-12"
 
