--- a/app/views/volumes/_volume.html.slim
+++ b/app/views/volumes/_volume.html.slim
@@ -2,7 +2,7 @@
   .col-md-12.padb20
     = device_form.fields_for :volumes do |volumes_form|
       .field.col-md-2
-        = volumes_form.text_field :description, readonly: true, style: "border:none;"
+        = volumes_form.text_field :description, readonly: true, style: "border:none; font-weight: bold"
         = volumes_form.number_field :value, min: 0, max:100, class: "form-control"
     .col-md-12.padt20
       = device_form.submit t('std.save'), class: "btn btn-md btn-success pull-left col-md-12"
