--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,10 +1,10 @@
 = paginate @tasks
-
 /= link_to t('tasks.new'), new_task_path, class: "glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
 
-= form_tag tasks_path, method: 'get' do
-  = text_field_tag :search, params[:search]
-  = submit_tag t('orders.search'), name: nil
+p.col-md-12
+  = form_tag tasks_path, method: 'get' do
+    = text_field_tag :search, params[:search]
+    = submit_tag t('orders.search'), name: nil
 
 table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
