--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -16,7 +16,7 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
       th
       /th Options
       th
-      th
+      th = t('orders.thead.user')
 
   tbody
     - @tasks.each do |task|
