--- a/app/views/mediafiles/_mediafile.html.slim
+++ b/app/views/mediafiles/_mediafile.html.slim
@@ -18,4 +18,7 @@
       - if mediafile.filename.length > 4 && (mediafile.filename[-4..-1] == '.png' || mediafile.filename[-4..-1] == '.jpg')
         = link_to image_tag(mediafile.file, :size => '25x25'), image_path(mediafile.file)
 
+    - if @device_id.present?
+      td class="col-md-1 img-status status-#{Task.where(mediafile_id: mediafile.id, device_id: @device_id).first.typeofstatus.name.downcase}"
+
     /td = link_to 'Destroy Mediafile', [mediafile.content, mediafile], method: :delete, data: { confirm: 'Are you sure?' }
