--- a/app/views/plsbgimages/show.html.slim
+++ b/app/views/plsbgimages/show.html.slim
@@ -1,15 +1,41 @@
 /p#notice = notice
 
-p
-  strong = "#{t('pls.name')}:"
-  = @plsbgimage.name
-p
-  strong = "#{t('pls.devices')}:"
-  - @plsbgimage.devices.each do |device|
-    p #{device.id}. #{device.name}
-p
-  strong = "#{t('pls.files')}:"
-  - @plsbgimage.mediafiles.each do |mediafile|
-    p #{mediafile.id}. #{mediafile.filename}
+.col-md-12
+  h2.panel.panel-warning
+    .panel-heading
+      = "#{t('pls.title')}: "
+      - if @plsbgimage.name.length > 0
+        = @plsbgimage.name
+      - else
+        = "#{t('std.empty')}"
+
+  .col-md-6
+    h4= "#{t('devices.few')}:"
+    table.table.table-striped.table-hover.table-condensed
+      thead
+        tr
+          th.col-md-1 #
+          th = t('pls.name')
+      tbodys
+        - @plsbgimage.devices.each do |device|
+          tr
+            td = device.id
+            td = device.name
+
+  .col-md-6
+    h4= "#{t('contents.show.files')}:"
+    table.table.table-striped.table-hover.table-condensed
+      thead
+        tr
+          th.col-md-1 #
+          th = t('pls.name')
+      tbodys
+        - @plsbgimage.mediafiles.each do |mediafile|
+          tr
+            td = mediafile.id
+            td = mediafile.filename
+            td
+              - if mediafile.filename.length > 4 && (mediafile.filename[-4..-1] == '.png' || mediafile.filename[-4..-1] == '.jpg')
+                = link_to image_tag(mediafile.file, :size => '25x25'), image_path(mediafile.file)
 
 = link_to t('std.back'), plsbgimages_path
