--- a/app/views/plsbgmusics/show.html.slim
+++ b/app/views/plsbgmusics/show.html.slim
@@ -13,12 +13,12 @@
     table.table.table-striped.table-hover.table-condensed
       thead
         tr
-          th #
+          th.col-md-1 #
           th = t('pls.name')
       tbodys
         - @plsbgmusic.devices.each do |device|
           tr
-            td.col-md-1 = device.id
+            td = device.id
             td = device.name
 
   .col-md-6
@@ -26,7 +26,7 @@
     table.table.table-striped.table-hover.table-condensed
       thead
         tr
-          th #
+          th.col-md-1 #
           th = t('pls.name')
       tbodys
         - @plsbgmusic.mediafiles.each do |mediafile|
