--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -54,6 +54,7 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
           /cmd.two
           = link_to '', {:controller => "tasks", :action => "create_getinfo", :task => {:device_id => device.id, :typeoftask_id => 10, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-info-sign btn btn-md btn-default", title: 'Getinfo'
           = link_to '', {:controller => "tasks", :action => "create_gettrack", :task => {:device_id => device.id, :typeoftask_id => 8, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-question-sign btn btn-md btn-default", title: 'Что проигрывает?'
+          = link_to '', {:controller => "tasks", :action => "create_setweight", :task => {:device_id => device.id, :typeoftask_id => 34, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-sort btn btn-md btn-default", title: 'Установить вес всем'
           /cmd.one
           = link_to '', {:controller => "tasks", :action => "create_ssh", :task => {:device_id => device.id, :typeoftask_id => 11, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-console btn btn-md btn-default", title: 'SSH'
           = link_to '', {:controller => "tasks", :action => "create_setvolsofday", :task => {:device_id => device.id, :typeoftask_id => 12, :typeofstatus_id => 1, :options => ''}}, :method => "post", class: "glyphicon glyphicon-headphones btn btn-md btn-default", title: 'VolsOfDay'
