--- a/app/views/mediafiles/_mediafile.html.slim
+++ b/app/views/mediafiles/_mediafile.html.slim
@@ -3,6 +3,7 @@
     td = mediafile.id
     td = mediafile.filename
     td = mediafile.md5
+    td = mediafile.weight
     td = mediafile.created_at
     / td = mediafile.file
     td
