Comments form for add new volume in devices show

--- a/app/views/devices/show.html.slim
+++ b/app/views/devices/show.html.slim
@@ -31,8 +31,8 @@
     /  tbody
     == render 'volumes/volume'
 
-  h2 = t('devices.add_new_volume')
-  == render 'volumes/form'
+  /h2 = t('devices.add_new_volume')
+  /== render 'volumes/form'
 
 p.col-md-6
   p
