Add playlist scaffold + changes for gtw

--- a/app/views/layouts/_application_nav.html.slim
+++ b/app/views/layouts/_application_nav.html.slim
@@ -15,6 +15,7 @@
           li = link_to t('nav.tasks'), tasks_path
           li = link_to t('nav.messages'), messages_path
           /li = link_to t('nav.'), suborders_path
+          li = link_to t('nav.playlists'), playlists_path
           li = link_to t('nav.bgvideos'), plsbgvideos_path
           li = link_to t('nav.bgmusics'), plsbgmusics_path
           li = link_to t('nav.bgimages'), plsbgimages_path
