Fix show playlists

--- a/app/views/playlists/show.html.slim
+++ b/app/views/playlists/show.html.slim
@@ -1,5 +1,7 @@
 /p#notice = notice
 
+- Playlist.where(task_id: @playlist.task_id).each do |id|
+  id.mediafile.filename
 p
   strong Mediafile:
   = @playlist.mediafile.filename
