Fix show playlists

--- a/app/views/playlists/show.html.slim
+++ b/app/views/playlists/show.html.slim
@@ -1,7 +1,8 @@
 /p#notice = notice
 
 - Playlist.where(task_id: @playlist.task_id).each do |id|
-  id.mediafile.filename
+  span
+    = id.mediafile.filename
 p
   strong Mediafile:
   = @playlist.mediafile.filename
