--- a/app/views/playlists/show.html.slim
+++ b/app/views/playlists/show.html.slim
@@ -1,5 +1,10 @@
 /p#notice = notice
-table
+
+p
+   strong Device:
+   = @playlist.task.device.name
+
+table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
       th Filename
@@ -8,13 +13,5 @@ table
       tr
         td
           = id.mediafile.filename
-p
-  strong Mediafile:
-  = @playlist.mediafile.filename
-p
-  strong Task:
-  = @playlist.task.device.name
 
-= link_to 'Edit', edit_playlist_path(@playlist)
-'|
 = link_to 'Back', playlists_path
