Fix show playlists

--- a/app/views/playlists/show.html.slim
+++ b/app/views/playlists/show.html.slim
@@ -14,6 +14,6 @@ table.table-striped.table-hover.table-condensed.table-bordered
       tr
         td
           = id.mediafile.filename
-          - count += 1
+          - counter += 1
 
 = link_to 'Back', playlists_path
