Fix inxdex playlists

--- a/app/views/playlists/index.html.slim
+++ b/app/views/playlists/index.html.slim
@@ -1,6 +1,6 @@
 h1 Listing playlists
 
-table.table.table-striped.table-hover.table-condensed.table-bordered
+table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
       /th Mediafile
