--- a/app/views/playlists/show.html.slim
+++ b/app/views/playlists/show.html.slim
@@ -4,7 +4,7 @@ p
    strong Device:
    = @playlist.task.device.name
 
-table.table-striped.table-hover.table-condensed.table-bordered
+table.table-striped.table-hover.table-condensed
   thead
     tr
       th #
